# dtasks

./: .appveyor.yml  .gitmodules  CMakeLists.txt  README.md  config.cmake.in
include/dtasks/: task_queue.hpp  task_scheduler.hpp
include/dumb_tasks/: CMakeLists.txt  error_handler.hpp  executor.hpp  scheduler.hpp  task_queue.hpp
include/dumb_tasks/detail/: id.hpp
src/: CMakeLists.txt  dtasks_version.hpp.in  error_handler.cpp  executor.cpp  scheduler.cpp  task_queue.cpp  task_scheduler.cpp
